# as289r3

./: .gitignore  CMakeLists.txt  Cg12x24d.h  QR_Encode.cpp  QR_Encode.h  ad.cpp  ad.h  barcode.cpp  barcode.h  cg.cpp  cg.h  cmake.txt  cutter.cpp  cutter.h  decode.cpp  decode.h  hankana.h  image_IIFES.h  iodefine.h  main.cpp  memo.txt  printer.cpp  printer.h  rcvbuf.cpp  rcvbuf.h  rowBits.cpp  rowBits.h  sample.cpp  sample.h  sndbuf.cpp  sndbuf.h  spi.cpp  spi.h  taskbase.cpp  taskbase.h  unicode_tbl.h
cg/: Cg.c  Cg12x24d.c  Cg8x16d.c  Expand.c  Script.c  Unicode_tbl.c  cg16x16c.c  cg24x24a.c
